Added section headers

--- a/04-emis/cap/coffee-roaster-consumer/.env.sample
+++ b/04-emis/cap/coffee-roaster-consumer/.env.sample
@@ -1,4 +1,11 @@
+/******
+* EMIS
+*******/
 // cds.requires.AMQP.brokerName = "EMIS"
 // cds.requires.AMQP.credentials = { "oa2": { "client": "sb-CC22W8JN-4516-1GS3-ESEH-624S87IFB255-4823cq68-7h3m-061d-0evj-7i5714s16a36!b68542|eventing-xsuaa-broker!b62872", "secret": "85cub18w-or63-1854-f0n3-r6bn420266nm$epGrTWkfCUcu-rERxb0UBRRkBc67HbWRRXGcCIFXob0=", "endpoint": "https://<subdomain>.authentication.<region>.hana.ondemand.com/oauth/token" }, "uri": "wss://<emis-instance>.<region>.a.eventmesh.integration.cloud.sap/protocols/amqp10ws" }
+
+/******
+* AEM
+*******/
 // cds.requires.AMQP.brokerName = "AEM"
 // cds.requires.AMQP.credentials = { "uri": "amqps://solace-cloud-client:<password>@mr-connection-<instance-id>.messaging.solace.cloud:5671" }
